--- a/templates/proj/about/database.html.twig
+++ b/templates/proj/about/database.html.twig
@@ -5,5 +5,11 @@
 
         <h1>{{ pageTitle }}</h1>
 
+        <img
+            width="480"
+            class="img"
+            src="/img/proj/class-diagram.png"
+            alt="Klassdiagram"/>
+
     </main>
 {% endblock %}
