--- a/assets/styles/project.css
+++ b/assets/styles/project.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400&family=Josefin+Slab:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -327,9 +327,9 @@ body {
   align-items: center;
   flex-wrap: wrap;
   padding: 0.7rem 2.8rem;
-  border-bottom: 3px solid #004848;
-  background-color: rgba(0, 0, 0, 0.4);
-  color: #A17317;
+  border-bottom: 3px solid #164D4D;
+  background-color: #002121;
+  color: #F2F3F2;
 }
 
 .site-title {
@@ -383,9 +383,9 @@ body {
   justify-content: center;
   align-items: center;
   padding: 1.4rem 2.8rem;
-  border-top: 3px solid #004848;
-  background-color: rgba(0, 0, 0, 0.4);
-  color: #DEB055;
+  border-top: 3px solid #164D4D;
+  background-color: #002121;
+  color: #F2F3F2;
 }
 .footer p,
 .footer ul {
@@ -400,7 +400,7 @@ body {
 .body {
   display: flex;
   flex-direction: column;
-  background-color: #0d100d;
+  background-color: #002C00;
 }
 
 .site-header {
@@ -463,7 +463,7 @@ pre code {
 .form label, .label-small, .header-xs, .header-sm, h4,
 .header-m, h3,
 .header-lg, h2, h1 {
-  font-family: "Josefin Sans", sans-serif;
+  font-family: "Lora", serif;
   font-weight: 100;
   text-transform: uppercase;
   letter-spacing: 0.03em;
@@ -472,18 +472,21 @@ pre code {
 
 .sub-nav li,
 .aside li, .site-header .nav a {
+  font-family: "Lora", serif;
   font-size: 1.69rem;
   font-weight: 300;
-  color: #C7942E;
+  color: #F2F3F2;
   text-transform: lowercase;
 }
 
 .site-header .site-title {
+  font-family: "Lora", serif;
   font-size: 2.8561rem;
-  font-weight: 700;
+  font-weight: 600;
   text-transform: lowercase;
 }
 .footer {
+  font-family: "Lora", serif;
   text-transform: lowercase;
 }
 .footer * {
@@ -491,10 +494,10 @@ pre code {
 }
 
 .body {
-  font-family: "Josefin Slab", monospace;
+  font-family: "Montserrat", sans-serif;
   line-height: 1.4;
   letter-spacing: 0.08em;
-  color: #fff;
+  color: #F2F3F2;
 }
 
 .sub-nav li,
@@ -514,7 +517,7 @@ p {
 }
 
 a {
-  color: #C7942E;
+  color: #F2F3F2;
   text-decoration: none;
 }
 
@@ -897,7 +900,7 @@ picture {
 .form select {
   width: 100%;
   padding: 0.7rem;
-  border: 1px solid #A17317;
+  border: 1px solid #74A0A0;
   border-radius: 3px;
   font-family: inherit;
   background-color: transparent;
@@ -907,7 +910,7 @@ picture {
 .form textarea {
   width: 100%;
   padding: 0.35rem;
-  border: 1px solid #A17317;
+  border: 1px solid #74A0A0;
   border-radius: 3px;
   height: 11.2rem;
   font-family: inherit;
@@ -917,8 +920,8 @@ picture {
 }
 .form option {
   background-color: #0d100d;
-  border: 1px solid #A17317;
-  color: #fff;
+  border: 1px solid #74A0A0;
+  color: #F2F3F2;
   font-family: inherit;
 }
 .form .button {
@@ -926,13 +929,13 @@ picture {
 }
 .form input:focus,
 .form textarea:focus {
-  outline: 2px solid #A17317;
+  outline: 2px solid #74A0A0;
 }
 
 .input-small {
   width: 100px;
   padding: 0.7rem;
-  border: 1px solid #A17317;
+  border: 1px solid #74A0A0;
   border-radius: 3px;
   font-family: inherit;
   background-color: transparent;
@@ -962,7 +965,7 @@ tr:nth-child(even) {
 }
 
 th {
-  background-color: #1C7878;
+  background-color: #1D661D;
 }
 
 tr:hover {
@@ -977,11 +980,11 @@ tr.clickable:hover {
   display: block;
   width: fit-content;
   padding: 0.7rem 1.4rem;
-  border: 1px solid #A17317;
+  border: 1px solid #74A0A0;
   border-radius: 3px;
   background-color: rgba(0, 0, 0, 0);
-  color: #C7942E;
-  font-family: "Josefin Sans", sans-serif;
+  color: #F2F3F2;
+  font-family: "Lora", serif;
   font-size: 1rem;
   font-weight: 400;
   text-decoration: none;
@@ -996,7 +999,7 @@ tr.clickable:hover {
 }
 
 .button:hover {
-  background-color: #785000;
+  background-color: #1D661D;
   color: #fff;
   cursor: pointer;
 }
@@ -1029,9 +1032,8 @@ tr.clickable:hover {
 }
 
 .flash-notice {
-  color: #004085;
-  background-color: #cce5ff;
-  border-color: #b8daff;
+  color: #fff;
+  background-color: #002121;
 }
 
 .flash-notice:before {
@@ -1039,9 +1041,8 @@ tr.clickable:hover {
 }
 
 .flash-warning {
-  color: #856404;
-  background-color: #fff3cd;
-  border-color: #ffeeba;
+  color: #000;
+  background-color: #FFD88A;
 }
 
 .flash-warning:before {
@@ -1059,7 +1060,7 @@ tr.clickable:hover {
 
 .container-frame {
   padding: 1.4rem;
-  border: 1px solid #A17317;
+  border: 1px solid #74A0A0;
   border-radius: 5px;
   margin-bottom: 1.4rem;
 }
@@ -1068,7 +1069,7 @@ tr.clickable:hover {
   display: flex;
   flex-direction: column;
   width: 100%;
-  border: 1px solid #A17317;
+  border: 1px solid #74A0A0;
   border-radius: 10px;
   padding: 1.4rem;
   margin-bottom: 2.8rem;
@@ -1107,7 +1108,7 @@ tr.clickable:hover {
 }
 .gameboard .empty-slot:hover {
   cursor: pointer;
-  background-color: #785000;
+  background-color: #1D661D;
 }
 .gameboard *[class*=hand-score] {
   position: relative;
@@ -1134,7 +1135,7 @@ tr.clickable:hover {
   max-width: 400px;
   padding: 0.7rem;
   margin-bottom: 1.4rem;
-  border: 1px solid #A17317;
+  border: 1px solid #74A0A0;
   border-radius: 5px;
 }
 
