--- a/assets/styles/project/scss/partials/typography/_fonts.scss
+++ b/assets/styles/project/scss/partials/typography/_fonts.scss
@@ -1,11 +1,4 @@
 // FONTS
 
-// Font Awesome
-// @import '../../../../shared/fontawesome/scss/fontawesome';
-// $fa-font-path: '../../shared/fontawesome/webfonts';
-// @import '../../../../shared/fontawesome/scss/brands';
-// @import '../../../../shared/fontawesome/scss/solid';
-
-
-// Google fonts (Josefin Sans, Josefin Slab)
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100;200;300;400&family=Josefin+Slab:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap');
+// Google fonts (Lora, Montserrat)
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
