--- a/assets/styles/project/scss/partials/_variables.scss
+++ b/assets/styles/project/scss/partials/_variables.scss
@@ -91,6 +91,7 @@ $color-body: $almost-white;
 $color-header: $almost-white;
 $color-footer: $almost-white;
 $color-nav-links: $almost-white;
+$color-regular-links: $yellow-1;
 $color-yellow: $yellow-0;
 
 $color-btn-del: $white;
