--- a/templates/project_layout.html.twig
+++ b/templates/project_layout.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block favicon %}
-    <link rel="icon" href="img/proj/playing-cards.svg">
+    <link rel="icon" href="/img/proj/playing-cards.svg">
 {% endblock %}
 
 {% block stylesheets %}
