--- a/templates/proj/index.html.twig
+++ b/templates/proj/index.html.twig
@@ -5,10 +5,9 @@
 
         <h1>{{ pageTitle }}</h1>
 
-        <h2 class="header-m margin-b">
-            Välkommen till sidan för mitt projekt i kursen MVC!<br>
-            Jag har valt att bygga spelet "Poker Squares."
-        </h2>
+        <p class="header-custom">
+            Välkommen till sidan för mitt projekt i kursen MVC, där jag har valt att bygga spelet Poker Squares!
+        </p>
 
         <img
             class="img"
