--- a/templates/project_layout.html.twig
+++ b/templates/project_layout.html.twig
@@ -36,6 +36,6 @@
 
 {% block footer %}
     <footer class="footer">
-        <p>Copyright &copy; 2024 Poker Squares Project by Olof Jönsson - oljn22</p>
+        <p>Copyright &copy; 2024 Poker Squares Project - Olof Jönsson - oljn22</p>
     </footer>
 {% endblock %}
