Add text content

--- a/assets/styles/project/scss/partials/_images.scss
+++ b/assets/styles/project/scss/partials/_images.scss
@@ -17,7 +17,12 @@
 figure,
 picture {
     margin: 0;
-    display: flex;
+    // display: flex;
+}
+
+figcaption {
+    font-style: italic;
+    // text-align: center;
 }
 
 .profile-img {
