--- a/assets/styles/project/scss/partials/responsive/_responsive.scss
+++ b/assets/styles/project/scss/partials/responsive/_responsive.scss
@@ -5,5 +5,7 @@
 @forward "base";
 @forward "typography";
 @forward "images";
+@forward "containers";
+@forward "poker-squares";
 
 @use "../variables" as var;
