--- a/templates/proj/about/database.html.twig
+++ b/templates/proj/about/database.html.twig
@@ -8,7 +8,7 @@
         <figure class="img">
             <img
             width="480"
-            src="/img/proj/er-diagram.png"
+            src="{{ asset('img/proj/er-diagram.png') }}"
             alt="ER-diagram över databastabeller"/>
             <figcaption>ER-diagram över fyra tabeller i databasen</figcaption>
         </figure>
