--- a/templates/proj/index.html.twig
+++ b/templates/proj/index.html.twig
@@ -11,8 +11,8 @@
 
         <img
             class="img"
-            src="/img/proj/cards-bg-700.jpg"
-            srcset="img/about/cards-bg-1400.jpg 2x"
+            src="{{ asset('img/proj/cards-bg-700.jpg') }}"
+            srcset="{{ asset('img/proj/cards-bg-1400.jpg') }} 2x"
             alt="En bild på spelkort"/>
 
         <div class="container-flex">
