Add report content and run metrics, tests etc

--- a/templates/project_layout.html.twig
+++ b/templates/project_layout.html.twig
@@ -2,10 +2,14 @@
 
 {% block favicon %}
     <link rel="icon" href="{{ asset('img/proj/playing-cards.svg') }}">
-    {{ asset('') }}
 {% endblock %}
 
 {% block stylesheets %}
+    {# Load fonts faster #}
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
     {{ encore_entry_link_tags('project') }}
 {% endblock %}
 
