Small bug fixes, and layout changes, plus lint

--- a/assets/styles/project/scss/partials/_images.scss
+++ b/assets/styles/project/scss/partials/_images.scss
@@ -9,20 +9,19 @@
     filter: brightness(0.85);
 }
 
-// .img-center {
-//     display: flex;
-//     justify-content: center;
-// }
-
 figure,
 picture {
     margin: 0;
-    // display: flex;
+    margin-bottom: var.$baseline;
+
+    .img {
+        margin-bottom: 0;
+    }
 }
+
 
 figcaption {
     font-style: italic;
-    // text-align: center;
 }
 
 .profile-img {
