--- a/assets/styles/project.css
+++ b/assets/styles/project.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -612,6 +611,11 @@ li {
 figure,
 picture {
   margin: 0;
+  margin-bottom: 1.4rem;
+}
+figure .img,
+picture .img {
+  margin-bottom: 0;
 }
 
 figcaption {
