Fix issue with session data loss

--- a/templates/proj/game/index.html.twig
+++ b/templates/proj/game/index.html.twig
@@ -5,6 +5,8 @@
 
         <h1>{{ pageTitle }}</h1>
 
+        {{ include('flash.html.twig') }}
+
         <p class="header-custom">Välkommen att spela en runda Poker Squares!</p>
 
         <p class="header-custom">Du kan välja att spela själv, mot datorn, eller mot en annan spelare. Lycka till!</p>
